# ICPC

./: CMakeLists.txt  README.md
2022/: 1650B.cpp  Beuty.cpp  Bit++.cpp  HelpfulMaths.cpp  NextRound.cpp  Stones.cpp
2023/: CD.cpp  CellsNotUnderAttack.cpp  ICanGuessTheDataStructure.cpp  IntegerLists.cpp  ZuhairAndStrings.cpp
EjerciciosPractica/: BoyGirl.cpp  CMakeLists.txt  DivMod.cpp  DominoPiling.cpp  PetyaAndStrings.cpp  Stones.cpp  Trees.cpp  WordCapitalization.cpp  main.cpp
